# camlid

./: .ocamlformat-ignore  CHANGES  Makefile  README.md  camlid.opam  dune-project
.github/workflows/: lint.yml  opam-dependency-submission.yml
doc/: index.mld
lib/: dune  expert.ml  expert.mli  expr.ml  expr.mli  generate.ml  generate.mli  helper.ml  helper.mli  type.ml
tests/: abstract.expected  abstract.ml  abstract.t  array.expected  array.ml  array.t  basic.t  convert.expected  convert.ml  convert.t  convert_defs.h  cudd.expected  cudd.ml  cudd_stub_def.h  custom.expected  custom.ml  custom.t  dune  inout.expected  inout.ml  inout.t  input.expected  input.ml  input.t  no_arg_no_value.expected  no_arg_no_value.ml  no_arg_no_value.t  output.expected  output.ml  output.t  result.expected  result.ml  result.t  run.t
tests/abstract/: app.ml  dune  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/abstract/generator/: generator.ml
tests/adt/: app.expected  app.ml  defs.h  dune  lib.c  lib.h  mylib.ml  mylib_stub.c  mylib_stub.h
tests/adt/generator/: generator.ml
tests/array/: app.expected  app.ml  dune  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/array/generator/: generator.ml
tests/convert/: README.md  app.expected  app.ml  defs.h  dune  lib.c  lib.h  mylib.ml  mylib_stub.c  mylib_stub.h
tests/convert/generator/: generator.ml
tests/cudd/: app.expected  app.ml  cudd.c  cudd.h  defs.h  dune  mylib.ml  mylib_stub.c  mylib_stub.h
tests/cudd.t/: cudd.h  custom_def.h  gen.ml  run.t
tests/cudd/generator/: dune  generator.ml
tests/custom/: app.expected  app.ml  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/custom/generator/: generator.ml
tests/inout/: app.expected  app.ml  dune  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/inout/generator/: generator.ml
tests/input/: app.expected  app.ml  dune  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/no_arg_no_value/: app.ml  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/output/: app.expected  app.ml  dune  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/result/: app.ml  dune  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/result/generator/: generator.ml
tests/string/: app.expected  app.ml  dune  lib.c  lib.h  mylib.ml  mylib_stub.c
tests/utils/: dune  utils.ml
(+5 files in other folders)
