(rule
 (targets mylib_stub.c mylib.ml)
 (action
  (run %{exe:generator/generator.exe}))
 (mode promote))

(test
 (name app)
 (foreign_stubs
  (language c)
  (names mylib_stub lib)
  (flags
   -Wall
   -Werror
   -Wconversion
   -Wstrict-prototypes
   --pedantic-errors
   -std=c11))
 (libraries fmt))
