(rule (targets mylib_stub.h mylib_stub.c mylib.ml) (action (run %{exe:generator/generator.exe})) (mode promote))

(test (name app) (foreign_stubs (language c) (names mylib_stub lib) (flags -Wall -Wconversion --pedantic-errors -std=c23))
(modes byte_complete exe))

(rule
(alias runtest)
(action
 (progn
    (with-stdout-to byte.result (run %{exe:app.bc.exe}))
    (run diff -u %{dep:app.expected} byte.result)
 )))